fix alignment of table

--- a/SimpleCDN/wwwroot/styles.css
+++ b/SimpleCDN/wwwroot/styles.css
@@ -26,6 +26,7 @@ body {
 
 main {
 	overflow: auto;
+	flex-grow: 1;
 }
 
 table {
